--- a/css/styles.css
+++ b/css/styles.css
@@ -13,9 +13,73 @@
   --common-txtcolor: #757575;
   --footer-contacts: rgb(255, 255, 255, 0.6);
   --button-color: #f5f4fa;
+  --header-line: #ececec;
+  --card-bottom-line: #eeeeee;
+}
+/******* Стили позиционирования  *******/
+h1,
+h2,
+h3,
+h4,
+p,
+ul {
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
+img {
+  display: block;
+  width: 100%;
+}
+
+.container {
+  /* outline: 3px solid rgb(76, 231, 28);
+  background-color: aqua; */
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin: 0 auto;
+
+  display: block;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.section {
+  /* outline: 1px solid black; */
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
+.header-container,
+.nav-list,
+.adress-list {
+  display: flex;
+}
+
+.header-container {
+  align-items: center;
+}
+
+.nav-list {
+  margin-left: 93px;
+}
+
+.nav-item:not(:last-child) {
+  margin-right: 50px;
+}
+
+.adress-list {
+  margin-left: auto;
+}
+
+.adress-item:not(:last-child) {
+  margin-right: 50px;
+}
+/* ****************************************** */
+
 body {
+  /* background-color: blue; */
   color: var(--common-txtcolor);
   font-family: var(--primery-font), sans-serif;
   font-size: 14px;
@@ -42,18 +106,29 @@ body {
   color: var(--color-secondary);
 }
 /* -------------- */
+
 /* Стилизация верхнего меню - навигации и списка контактов*/
 .header {
   font-family: inherit;
   font-weight: 500;
   line-height: 1.14;
   letter-spacing: 0.02em;
+  border-bottom: 1px solid var(--header-line);
 }
-.nav-item {
+
+.nav-link {
+  display: block;
+  padding-top: 27px;
+  padding-bottom: 37px;
+
   color: var(--title-color);
 }
 
-.adress-item {
+.adress-link {
+  display: block;
+  padding-top: 27px;
+  padding-bottom: 37px;
+
   color: var(--common-txtcolor);
 }
 
@@ -64,6 +139,9 @@ body {
 /* Стилизация визуальных еффектов  елементов */
 .list {
   list-style-type: none;
+  padding: 0;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 .link {
@@ -85,10 +163,15 @@ body {
 
 /* Стилизация секции Герой */
 .hero {
+  padding-top: 200px;
+  padding-bottom: 200px;
+
   background-color: var(--background-color);
   color: var(--color-secondary);
+  text-align: center;
 }
 .hero-title {
+  margin-bottom: 30px;
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
@@ -134,6 +217,8 @@ body {
 
 /* Стилизация Секция Особенности */
 .features-title {
+  padding-bottom: 10px;
+
   color: var(--title-color);
   font-weight: 700;
   font-size: 14px;
@@ -141,6 +226,35 @@ body {
   letter-spacing: 0.03em;
   text-transform: uppercase;
 }
+.features-list {
+  display: flex;
+}
+
+.features-item {
+  width: calc(100 - 90px) / 4;
+}
+
+.features-item:not(:last-child) {
+  padding-right: 90px;
+}
+
+/*секция наших проектов */
+
+.projects-list {
+  display: flex;
+}
+.projects-item {
+  width: calc(100 -60px) / 3;
+  padding-top: 50px;
+}
+.projects-item:not(:last-child) {
+  padding-right: 30px;
+}
+.projects-img {
+  display: block;
+}
+
+/* ******************* */
 
 /* Секция Наша команда */
 .team {
@@ -150,10 +264,29 @@ body {
   line-height: 1.19;
   letter-spacing: 0.03em;
 }
-.team-title {
+
+.team-list {
+  display: flex;
+}
+
+.team-card {
+  width: calc(100 - 90px) / 4;
+  margin-top: 50px;
+  text-align: center;
+}
+.team-card:not(:last-child) {
+  margin-right: 30px;
+}
+
+.team-card .team-title {
   color: var(--title-color);
   font-size: 16px;
   font-weight: 500;
+  margin-top: 30px;
+  margin-bottom: 10px;
+}
+.team-img {
+  display: block;
 }
 
 /* Стили футера */
@@ -161,6 +294,11 @@ body {
   line-height: 24px;
   color: var(--color-secondary);
   background-color: var(--background-color);
+}
+
+.footer-container {
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 
 .footer-link {
@@ -173,11 +311,16 @@ body {
 .contacts {
   color: var(--footer-contacts);
 }
+
+.footer-list {
+  margin-top: 20px;
+}
 /* ----------------- */
 
 /* Стилизация Портфолио */
 
 .button {
+  padding: 6px 22px;
   background-color: var(--button-color);
   color: var(--title-color);
   font-family: inherit;
@@ -187,9 +330,34 @@ body {
   text-align: center;
   letter-spacing: 0.03em;
   cursor: pointer;
+  border-color: var(--button-color);
+  border-radius: 4px;
+
+  border: none;
+}
+
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.gallery-item {
+  width: calc(100 - 60px) / 3;
+  border-bottom: 1px solid var(--card-bottom-line);
+}
+.gallery-item:not(:nth-child(3n)) {
+  margin-right: 30px;
+}
+.gallery-item:not(:nth-last-child(-n + 3)) {
+  margin-bottom: 30px;
+}
+
+.card-content {
+  padding: 20px 24px;
 }
 
 .gallery-title {
+  margin-bottom: 4px;
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
@@ -204,4 +372,14 @@ body {
   letter-spacing: 0.03em;
 
   color: var(--common-txtcolor);
+}
+
+.button-list {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 50px;
+}
+
+.button-list-item:not(:last-child) {
+  margin-right: 8px;
 }
